# ML-Projects

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mlflow_utils.py  pytest.ini  requirements.txt
.github/workflows/: register_model.yml
app/: main.py  model_loader.py
configs/: train.yaml  train_config.yaml
fastapi-ml-deployment/: .env  Dockerfile  README.md  requirements.txt
fastapi-ml-deployment/app/: main.py  model.py  predict.py  train.py  utils.py
fastapi-ml-deployment/tests/: test_api.py
ml-pipeline/: README.md
ml-pipeline/app/: main.py
ml-pipeline/mlflow_pipeline/: data_ingest.py  (+3 more)
mlflow_pipeline/: auto_register.py  mlflow_utils.py  preprocess.py
nlp-fine-tuning-api/: .gitattributes  Dockerfile  README.md  k8s.yaml  requirements-dev.txt  requirements.txt  serve.py  train.py
notebooks/: 01-finetune-text-classification.ipynb  04-give-me-some-credit.ipynb
resume-matcher/: README.md  app.py  main.py  requirements.txt
retail-sales-forecaster/: README.md  app.py  main.py  requirements.txt
ruby-ml-sinatra/: README.md
rust-data-preprocessing/: Cargo.toml  README.md
sql-python-rdms/cmsc408-sp2025-hw5-serrotrehpotsirhc-main/: README.md  pyproject.toml
sql-python-rdms/cmsc408-sp2025-hw5-serrotrehpotsirhc-main/reports/: _quarto.yml  explore.html  explore.qmd  helpers.py  report.html  report.qmd  test.html  test.qmd
sql-python-rdms/cmsc408-sp2025-hw7-serrotrehpotsirhc/: README.md  pyproject.toml
sql-python-rdms/cmsc408-sp2025-hw7-serrotrehpotsirhc/reports/: _quarto.yml  helpers.py  my-ddl.sql  report.qmd
sql-python-rdms/cmsc408-sp2025-hw9-serrotrehpotsirhc/: README.md  pyproject.toml  sp25_torresc6_hr.session.sql
sql-python-rdms/cmsc408-sp2025-hw9-serrotrehpotsirhc/reports/: _quarto.yml  helpers.py  report.html  report.qmd
sql-python-rdms/cmsc408-sp2025-hw9-serrotrehpotsirhc/source-data/: README.md  _quarto.yml  helpers.py  loader.html  loader.qmd  simpsons-ddl.sql  simpsons-sql.ddl  simpsons.html  simpsons.qmd
tests/: test_preprocess.py
(+167 files in other folders)
