[tool.poetry]
name = "cmsc408-sp2025-hw5-template"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
tabulate = "^0.9.0"
markdown = "^3.5"
mysql-connector-python = "^8.1.0"
numpy = {version = "^1.26.1", python = "3.11"}
pandas = "^2.1.1"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
